[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/ragger/__version__.py"
local_scheme = "no-local-version"

[tool.mypy]
ignore_missing_imports = true

[tool.yapf]
based_on_style = "pep8"
column_limit = 100

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "@abstractmethod",
    "pragma: no cover"
]
