[metadata]
name = ragger
version = 0.0.1
author = Ledger
author_email = hello@ledger.fr
description = Testing framework using Speculos and LedgerComm as backends
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LedgerHQ/ragger
project_urls =
    Bug Tracker = https://github.com/LedgerHQ/ragger/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
package_dir=
        =src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires=
        speculos>=0.1.85
        ledgercomm
        ledgercomm[hid]
	ledgerwallet==0.1.3

[options.packages.find]
where=src
exclude =
    tests

[options.extras_require]
tests=
        pytest
checkers=
        yapf
        toml
        flake8
        mypy
doc=
        sphinx
        python-docs-theme
