[metadata]
name = ragger
version = attr: ragger.__version__
author = Ledger
author_email = hello@ledger.fr
description = Testing framework using Speculos and LedgerComm as backends
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LedgerHQ/ragger
project_urls =
    Bug Tracker = https://github.com/LedgerHQ/ragger/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X

[options]
package_dir=
        =src
packages = find:
include-package-data = True
python_requires = >=3.6
install_requires=
        bip_utils>=2.4.0
        py-sr25519-bindings==0.1.4
        semver>=2.13.0

[options.packages.find]
where=src
exclude =
    tests

[options.package_data]
ragger = py.typed

[options.extras_require]
tests=
        pytest
        pytest-cov
checkers=
        yapf
        toml
        flake8
        mypy
doc=
        pylint    # embeds pyreverse
        sphinx
        sphinx-rtd-theme
        sphinxcontrib-images
        sphinx-copybutton
        Jinja2>=3.0
        docutils==0.16  # higher versions trigger build bugs with the RTD theme
speculos=
        speculos>=0.1.128
ledgercomm=
        ledgercomm
        ledgercomm[hid]
ledgerwallet=
        ledgerwallet==0.1.3
all_backends=
        speculos>=0.1.128
        ledgercomm
        ledgercomm[hid]
        ledgerwallet==0.1.3
